fix width and margin overlapping in card styling

--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -7,7 +7,6 @@
     padding: 3vw;
     border-radius: 10px;
     margin-top: 2vw;
-    margin-bottom: 2vw;
   }
   .subcard {
     max-width: 100%;
@@ -17,7 +16,6 @@
     padding: 2vw;
     border-radius: 10px;
     margin-top: 2vw;
-    margin-bottom: 2vw;
   }
   .thin-card {
     min-width: 100%;
@@ -27,7 +25,6 @@
     padding: 1vw;
     border-radius: 10px;
     margin-top: 2vw;
-    margin-bottom: 2vw;
   }
 }
 
@@ -40,7 +37,6 @@
     padding: 2vw;
     border-radius: 10px;
     margin-top: 2vw;
-    margin-bottom: 2vw;
   }
   .subcard {
     max-width: 100%;
@@ -60,20 +56,18 @@
     padding: 1vw;
     border-radius: 10px;
     margin-top: 2vw;
-    margin-bottom: 2vw;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .card {
-    min-width: 40vw;
+    min-width: 100%;
     background-color: #ffffff;
     color: black;
     box-sizing: border-box;
     padding: 1.3vw;
     border-radius: 10px;
     margin-top: 1vw;
-    margin-bottom: 1vw;
   }
   .subcard {
     max-width: 100%;
@@ -93,6 +87,5 @@
     padding: 0.5vw;
     border-radius: 10px;
     margin-top: 1vw;
-    margin-bottom: 1vw;
   }
 }
